--- a/css/style.css
+++ b/css/style.css
@@ -2,42 +2,127 @@
     width: 100px;
     height: 100px;
     border: 1px solid red;
+    transition: 3s;
 }
+/* Soluzione esercizio 1 */
+.ex-1-square:hover {
+    background-color: red;
+}
+/* /Soluzione esercizio 1 */
+
 .ex-2-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 3s;
 }
+/* Soluzione esercizio 2 */
+.ex-2-square:active {
+    width: 100%;
+}
+/* /Soluzione esercizio 2 */
+
 .ex-3-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
 }
+/* Soluzione esercizio 3 */
+.ex-3-square:hover {
+    border-radius: 50%;
+}
+/* /Soluzione esercizio 3 */
+
 .ex-4-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
 }
+/* Soluzione esercizio 4 */
+.ex-4-square:hover {
+    opacity: 0%;
+}
+/* /Soluzione esercizio 4 */
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
     height: 60px;
     background: red;
 }
+/* Soluzione esercizio 5 */
+.ex-5-square:hover {
+    width: 80px;
+    height: 80px;
+}
+
+.ex-5-square:active {
+    width: 40px;
+    height: 40px;
+}
+/* /Soluzione esercizio 5 */
+
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
+
+/* Soluzione esercizio 6 */
+.ex-6-img:hover {
+    filter: grayscale(10);
+}
+/* /Soluzione esercizio 6 */
+
+.ex-7-img {
+    transition: 2s;
+}
+/* Soluzione esercizio 7 */
+.ex-7-img:hover {
+    filter: grayscale(.7) sepia(5);
+}
+/* /Soluzione esercizio 7 */
+
+/* Soluzione esercizio 8 */
+.ex-8-img:hover {
+    filter: grayscale(.7) sepia(5);
+    border-radius: 50px;
+}
+/* /Soluzione esercizio 8 */
 
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
 }
+/* Soluzione esercizio 9 */
+.ex-9-img:hover {
+    filter: grayscale(.7) sepia(5);
+    transform: scale(1.3);
+    border-radius: 30px;
+}
+/* /Soluzione esercizio 9 */
+
 .ex-10-icon {
     font-size: 60px;
+    animation-name: spin;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
+
+/* Soluzione esercizio 10 */
+@keyframes spin {
+    0% {
+        transform: rotate(360deg);
+    }
+}
+/* /Soluzione esercizio 10 */
+
 .ex-11-icon {
     font-size: 60px;
 }
+/* Soluzione esercizio n */
+/* /Soluzione esercizio n */
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
@@ -51,6 +136,12 @@
     text-align: center;
     text-decoration: none;
 }
+/* Soluzione esercizio n */
+/* /Soluzione esercizio n */
+
+/* Soluzione esercizio n */
+/* /Soluzione esercizio n */
+
 .ex-12-top-white, .ex-13-top-white {
     position: absolute;
     top: -10px;
@@ -59,6 +150,12 @@
     width: 60px;
     height: 20px;
 }
+/* Soluzione esercizio n */
+/* /Soluzione esercizio n */
+
+/* Soluzione esercizio n */
+/* /Soluzione esercizio n */
+
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
     bottom: -10px;
@@ -67,3 +164,9 @@
     width: 60px;
     height: 20px;
 }
+/* Soluzione esercizio n */
+/* /Soluzione esercizio n */
+
+/* Soluzione esercizio n */
+/* /Soluzione esercizio n */
+
