--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@
     font-size: 60px;
     animation-name: spin;
     animation-duration: 1s;
+    animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
 
@@ -116,12 +117,30 @@
     }
 }
 /* /Soluzione esercizio 10 */
-
 .ex-11-icon {
     font-size: 60px;
 }
-/* Soluzione esercizio n */
-/* /Soluzione esercizio n */
+
+.ex-11-icon:hover {
+    animation-name: spin-revert;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-direction: reverse;
+    animation-iteration-count: infinite;
+}
+/* Soluzione esercizio 11 */
+@keyframes spin-revert {
+    0% {
+        transform: rotate(0);
+    }
+    85% {
+        transform: rotate(315deg);
+    }
+    100% {
+        transform: rotate(0);
+    }
+}
+/* /Soluzione esercizio 11 */
 
 .ex-12-button, .ex-13-button {
     position: relative;
@@ -136,11 +155,6 @@
     text-align: center;
     text-decoration: none;
 }
-/* Soluzione esercizio n */
-/* /Soluzione esercizio n */
-
-/* Soluzione esercizio n */
-/* /Soluzione esercizio n */
 
 .ex-12-top-white, .ex-13-top-white {
     position: absolute;
@@ -150,11 +164,6 @@
     width: 60px;
     height: 20px;
 }
-/* Soluzione esercizio n */
-/* /Soluzione esercizio n */
-
-/* Soluzione esercizio n */
-/* /Soluzione esercizio n */
 
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
@@ -164,9 +173,43 @@
     width: 60px;
     height: 20px;
 }
-/* Soluzione esercizio n */
-/* /Soluzione esercizio n */
+/* Soluzione esercizio 12 */
+.ex-12-button:hover .ex-12-top-white {
+    animation-name: moveTop;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
 
-/* Soluzione esercizio n */
-/* /Soluzione esercizio n */
+@keyframes moveTop {
+    0% {
+        left: 10%;
+    }
+    50% {
+        left: calc(100% - 60px);
+    }
+    100% {
+        left: 10%;
+    }
+}
 
+.ex-12-button:hover .ex-12-bottom-white {
+    animation-name: moveBottom;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+@keyframes moveBottom {
+    0% {
+        right: 20%;
+    }
+    50% {
+        right: calc(100% - 60px);
+    }
+    100% {
+        right: 20%;
+    }
+}
+/* /Soluzione esercizio 12 */
+
+/* Soluzione esercizio 13 */
+/* /Soluzione esercizio 13 */
