--- a/css/style.css
+++ b/css/style.css
@@ -51,16 +51,15 @@
     width: 60px;
     height: 60px;
     background: red;
+    transition: transform 2s;
 }
 /* Soluzione esercizio 5 */
 .ex-5-square:hover {
-    width: 80px;
-    height: 80px;
+    transform: scale(2);
 }
 
 .ex-5-square:active {
-    width: 40px;
-    height: 40px;
+    transform: scale(.5);
 }
 /* /Soluzione esercizio 5 */
 
